<resources>
    <string name="app_name">AppCadastro</string>
    <string name="nome">Nome</string>
    <string name="titulo">Faça seu Cadastro!</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="nickname">Nickname</string>
    <string name="idade">Idade</string>
    <string name="email">nome@email.com</string>
    <string name="telefone">(xx)9xxxx-xxxx</string>
    <string name="cidade">Cidade</string>
    <string name="uf">UF</string>
    <string name="generos">Generos Favoritos</string>
    <string name="moba">MOBA</string>
    <string name="rpg">RPG</string>
    <string name="esporte">Esporte</string>
    <string name="plataforma">Plataforma</string>
    <string name="senha">Senha</string>
    <string name="confirmeSenha">Confirme a senha</string>

    <string-array name="estados">
        <item>Selecione...</item>
        <item>AC</item>
        <item>AL</item>
        <item>AM</item>
        <item>AP</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MG</item>
        <item>MS</item>
        <item>MT</item>
        <item>PA</item>
        <item>PB</item>
        <item>PE</item>
        <item>PI</item>
        <item>PR</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RO</item>
        <item>RR</item>
        <item>RS</item>
        <item>SC</item>
        <item>SE</item>
        <item>SP</item>
        <item>TO</item>
    </string-array>
</resources>