<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.098" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <EditText
                android:id="@+id/nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                tools:layout_editor_absoluteX="123dp"
                android:layout_weight="3"
                tools:layout_editor_absoluteY="308dp" />

            <EditText
                android:id="@+id/sobrenome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/sobrenome"
                tools:layout_editor_absoluteX="123dp"
                android:layout_weight="1"
                tools:layout_editor_absoluteY="308dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/nickname"
                tools:layout_editor_absoluteX="123dp"
                android:layout_weight="2"
                tools:layout_editor_absoluteY="308dp" />

            <EditText
                android:id="@+id/idade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/idade"
                tools:layout_editor_absoluteX="123dp"
                android:layout_weight="2"
                tools:layout_editor_absoluteY="308dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                tools:layout_editor_absoluteX="123dp"
                android:layout_weight="2"
                tools:layout_editor_absoluteY="308dp" />

            <EditText
                android:id="@+id/telefone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/telefone"
                tools:layout_editor_absoluteX="123dp"
                android:layout_weight="2"
                tools:layout_editor_absoluteY="308dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/cidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cidade"
            tools:layout_editor_absoluteX="123dp"
            android:layout_weight="1"
            tools:layout_editor_absoluteY="308dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/uf"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/uf"/>
            <Spinner
                android:id="@+id/estados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/estados"/>

        </LinearLayout>
        <TextView
            android:id="@+id/generos"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/generos"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/moba"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/moba"
                        android:onClick="onCheckboxClicked"/>
                    <CheckBox
                        android:id="@+id/rpg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/rpg"
                        android:onClick="onCheckboxClicked"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/esporte"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/esporte"
                        android:onClick="onCheckboxClicked"/>
                    <CheckBox
                        android:id="@+id/plataforma"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/plataforma"
                        android:onClick="onCheckboxClicked"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/senha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/senha"
                android:layout_weight="3" />
            <EditText
                android:id="@+id/confirmasenha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/confirmeSenha"
                android:layout_weight="1" />

        </LinearLayout>

        <ImageView
            android:id="@+id/addContato"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/add_user" />


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/Relative1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:background="@color/yellow">

        <ImageView
            android:id="@+id/group"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/group" />

        <ImageView
            android:id="@+id/info"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/group"
            android:src="@drawable/info"
            />

        <ImageView
            android:id="@+id/form"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@+id/group"
            android:src="@drawable/form"
            />


    </RelativeLayout>

</LinearLayout>

